<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_amount_lbl">Bill Amount</string>
    <string name="percent_lbl">Percent</string>
    <string name="tip_amount_lbl">Tip Amount</string>
    <string name="tip_amount_tv">$0.00</string>
    <string name="total_lbl">Total</string>
    <string name="total_tv">$0.00</string>
    <string name="reset_button">Reset</string>
    <string name="percent_tv">00%</string>
    <string name="rounding_lbl">Rounding</string>
    <string name="round_none">None</string>
    <string name="round_tip">Tip</string>
    <string name="round_total">Total</string>
    <string name="split_lbl">Split</string>
    <string name="per_person_lbl">Per Person</string>
    <string name="per_person_tv">$0.00</string>

    <string-array name="split_array">
        <item>No</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>
