<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.moore.tipcalculator.MainActivity">

    <TextView
        style="@style/MyAppTheme.Label"
        android:id="@+id/billAmountLbl"
        android:text="@string/bill_amount_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/billAmountET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_alignBottom="@+id/billAmountLbl"
        android:layout_alignParentEnd="true"
        android:textAlignment="textEnd"
        android:layout_toEndOf="@+id/percentTV" />

    <TextView
        style="@style/MyAppTheme.Label"
        android:id="@+id/percentLbl"
        android:text="@string/percent_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:layout_alignBaseline="@+id/percentTV"
        android:layout_alignBottom="@+id/percentTV"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/percentTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent_tv"
        android:layout_below="@+id/billAmountLbl"
        android:layout_toEndOf="@+id/tipAmountLbl"
        android:layout_marginTop="24dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/percentSeekBar"
        android:max="30"
        android:padding="10dp"
        android:progress="15"
        android:layout_above="@+id/tipAmountLbl"
        android:layout_alignStart="@+id/billAmountET"/>

    <TextView
        style="@style/MyAppTheme.Label"
        android:id="@+id/tipAmountLbl"
        android:text="@string/tip_amount_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="14dp"
        android:layout_below="@id/percentLbl" />

    <TextView
        android:id="@+id/tipAmountTV"
        android:text="@string/tip_amount_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="textEnd"
        android:layout_alignBaseline="@+id/tipAmountLbl"
        android:layout_alignBottom="@+id/tipAmountLbl"
        android:layout_alignParentEnd="true" />

    <TextView
        style="@style/MyAppTheme.Label"
        android:text="@string/total_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/totalLbl"
        android:textSize="20sp"
        android:layout_below="@+id/tipAmountLbl"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp" />

    <TextView
        android:id="@+id/totalTV"
        android:text="@string/total_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/totalLbl"
        android:textSize="20sp"
        android:layout_alignParentEnd="true" />

    <!-- the separator line -->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/separatorLine"
        android:layout_alignLeft="@+id/totalLbl"
        android:layout_below="@+id/totalLbl"
        android:background="@android:color/black"
        android:padding="5dp"/>

    <TextView
        style="@style/MyAppTheme.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/roundingLbl"
        android:layout_alignLeft="@+id/separatorLine"
        android:layout_below="@+id/separatorLine"
        android:padding="10dp"
        android:text="@string/rounding_lbl"
        android:textSize="20sp"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/roundingRadioGroup"
        android:layout_below="@+id/totalLbl"
        android:layout_toRightOf="@id/billAmountLbl"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/roundingNoneRadioButton"
            android:checked="true"
            android:text="@string/round_none"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/roundingTipRadioButton"
            android:text="@string/round_tip"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/roundingTotalRadioButton"
            android:text="@string/round_total"/>

    </RadioGroup>


    <TextView
        style="@style/MyAppTheme.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/splitLbl"
        android:layout_below="@+id/roundingRadioGroup"
        android:layout_alignLeft="@id/roundingLbl"
        android:padding="10dp"
        android:text="@string/split_lbl"
        android:textSize="20sp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/splitSinner"
        android:layout_alignLeft="@+id/perPersonTV"
        android:layout_alignTop="@+id/splitLbl"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/perPersonTV"
        android:layout_alignLeft="@+id/roundingRadioGroup"
        android:layout_alignBaseline="@+id/perPersonLbl"
        android:padding="5dp"
        android:text="@string/per_person_tv"
        android:textSize="20sp" />

    <Button
        android:text="@string/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resetButton"
        android:padding="5dp"
        android:layout_below="@+id/perPersonTV"/>

    <TextView
        style="@style/MyAppTheme.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/perPersonLbl"
        android:padding="10dp"
        android:text="@string/per_person_lbl"
        android:textSize="20sp"
        android:layout_below="@+id/splitLbl"
        android:layout_alignParentStart="true" />


</RelativeLayout>
</ScrollView>